# Homework-

./: .gitignore  README.md
Advanced C++ Programming/INI file parser/: INI file parser.sln  INI file parser.vcxproj  file.ini  main.cpp
Advanced C++ Programming/lesson 1/Under the hood/: Under the hood.sln  Under the hood.vcxproj  main.cpp
Advanced C++ Programming/lesson 2/Copying smart arrays/: main.cpp  (+2 more)
Basic C++ Programming/: README.md
Basic C++ Programming/OOP abstraction and encapsulation/: README.md
Building and connecting libraries/Task2 and 3/CMake_DynamicLibrary/: CMakeLists.txt  CMake_DynamicLibrary.cpp  leaver.cpp  leaver.h
CMake/1 task/: CMakeLists.txt  my_first_cmake_program.cpp  my_first_cmake_program.h
CMake/2 task/: CMakeLists.txt  equilateral_triangle.cpp  figure.cpp  quadrangle.cpp  rectangle.h  rhombus.h  triangle.cpp
Classes and objects/Калькулятор двух чисел/: Калькулятор_двух_чисел.cpp  Калькулятор_двух_чисел.sln
Cross_platform development with Qt/08_PreDataBase/: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cross_platform development with Qt/PreConcurrent/: CMakeLists.txt  mainwindow.cpp
Cross_platform development with Qt/PreGraphic/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Cross_platform development with Qt/PreTCPclient/: mainwindow.cpp  tcpclient.cpp
Cross_platform development with Qt/PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Cross_platform development with Qt/lesson_2/: CMakeLists.txt  main.cpp
Cross_platform development with Qt/lesson_3/: CMakeLists.txt  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cross_platform development with Qt/lesson_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Cross_platform development with Qt/lesson_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Design Patterns in C++/DRY and SOLID principles/: Dry_and_Solid.txt
Exceptions and Error Handling/Simple exception/: function_and_exception.h
Exceptions and Error Handling/Task2/: Task2.sln  Task2.vcxproj
Multi-file projects and libraries/: README.md
Multi-file projects and libraries/Class/: Class.sln  Class.vcxproj  class.cpp  function.cpp  header.h  main.cpp
Multi-file projects and libraries/Class Hierarchy/: Class Hierarchy.vcxproj  equilateral_triangle.cpp  equilateral_triangle.h  figure.cpp  figure.h  isosceles_triangle.cpp  main.cpp  parallelogram.cpp  quadrangle.cpp  rectangle.cpp  rhombus.cpp  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.h
Multi-file projects and libraries/Mathematical functions/: Function.cpp  Mathematical functions.sln  Mathematical functions.vcxproj  Source1.cpp  function.h  main.cpp
Multi-threaded and asynchronous programming/Thread-safe queue/: Thread-safe queue.sln  Thread-safe queue.vcxproj  main.cpp  safe_queue.cpp  safe_queue.h  thread_pool.cpp  thread_pool.h
OOP abstraction and encapsulation/Address sorting/: Address sorting.cpp  Address sorting.sln
OOP abstraction and encapsulation/Address_1/: Address.cpp  Address.sln
OOP inheritance and polymorphism/Figures. Methods/: Figures. Methods.cpp  Figures. Methods.sln
OOP inheritance and polymorphism/Figures. Number of sides/: Figures. Number of sides.cpp  Figures. Number of sides.vcxproj
OOP inheritance and polymorphism/Figures. Sides and corners/: Figures. Sides and corners.cpp  Figures. Sides and corners.sln  Figures. Sides and corners.vcxproj
Operator overloading/Comparisons in fractions/: main.cpp
Operator overloading/Other operations with fractions/: Other operations in fractions.sln  Other operations in fractions.vcxproj  class.h
Preprocessor and macros/Macro SUB/: Macro SUB.cpp  Macro SUB.sln  Macro SUB.vcxproj
Preprocessor and macros/Preprocessor directives/: Preprocessor directives.cpp  Preprocessor directives.sln  Preprocessor directives.vcxproj
Preprocessor and macros/Preprocessor directives new/: Preprocessor directives new.cpp  Preprocessor directives new.vcxproj
Structures and enumerations/Вывод/: вывод_remade.vcxproj
Structures and enumerations/Счет/: Account.sln  Account.vcxproj
Video game creation/Blueprints_and_С++_part_1/: CPPMyActor.cpp  CPPMyActor.h
Working with databases/lesson2/: Script.sql  Диаграма2.drawio
Working with databases/lesson3/: Script.sql  Script_Insert.sql  Script_Select.sql
Working with databases/lesson4/: CMakeLists.txt  main.cpp
Классы и объекты/Калькулятор двух чисел/: Калькулятор_двух_чисел.vcxproj
Классы и объекты/Счетчик/: Счетчик.cpp  Счетчик.sln  Счетчик.vcxproj
Сoursework/: README.md
Сoursework/CMake Race/: CMake Race.cpp  CMakeLists.txt  air_vehicles.cpp  all_terrain_boots.cpp  all_terrain_boots.h  camel.cpp  carpet_plane.cpp  carpet_plane.h  eagle.cpp  functions.cpp  functions.h  ground_vehicle.cpp
Сoursework/Race_programm/: Race_programm.vcxproj  function.cpp  function.h  main.cpp
Сoursework/TypeOfVehicle/: TypeOfVehicle.sln  TypeOfVehicle.vcxproj
Сoursework/Type_of_vehicle/: Type_of_vehicle.sln  Type_of_vehicle.vcxproj  air_vehicle.h  air_vehicles.cpp  all_terrain_boots.h  broom.cpp  broom.h  camel.h  camel_speedboad.cpp  camel_speedboad.h  carpet_plane.h  centaur.cpp  centaur.h  eagle.h  ground_vehicle.cpp  ground_vehicle.h  vehicle.h
Сoursework/race/: air_race.cpp  air_race.h  functions.cpp  functions.h  ground_race.cpp  ground_race.h  main.cpp  race.cpp  race.h  race.sln  race.vcxproj
Структуры и перечисления/: README.md
Структуры и перечисления/Вывод/: вывод.cpp  вывод.sln  вывод.vcxproj  вывод.vcxproj.filters  вывод_remade.cpp  вывод_remade.sln
Структуры и перечисления/Месяцы/: месяцы.vcxproj
Структуры и перечисления/Счет/: счет.cpp  счет.sln  счет.vcxproj  счет.vcxproj.filters
(+303 files in other folders)
