
cmake_minimum_required (VERSION 3.8)

project ("Class_hierarchy_cmake")

add_executable (Class_hierarchy_cmake "equilateral_triangle.cpp" "equilateral_triangle.h" "figure.cpp" "figure.h" "isosceles_triangle.cpp" "isosceles_triangle.h" "main.cpp" "parallelogram.cpp" "parallelogram.h" "quadrangle.cpp" "quadrangle.h" "rectangle.cpp" "rectangle.h" "rhombus.cpp" "rhombus.h" "right_triangle.cpp" "right_triangle.h" "square.cpp" "square.h" "triangle.cpp" "triangle.h")



